# nanogpt-titans

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: train_titans_l100.sh
src/nanogpt_titans/: __init__.py  eval_needle.py  eval_perplexity.py  eval_qwen_needle.py  mhc.py  mhc_mlx.py  model.py  muon.py  muon_mlx.py  packed_data.py  prepare_data.py  profile_model.py  sample.py  train.py  train_ddp.py  train_mlx.py  train_qwen_titans.py  triton_kernels.py  triton_memory_fused.py
src/nanogpt_titans/mlx/: __init__.py  config.py  decoder_layer.py  inspector.py  memory.py  model.py  profile_mlx.py  training.py  visualizer.py
src/nanogpt_titans/qwen_titans/: __init__.py  config.py  decoder_layer.py  generation.py  mag_decoder_layer.py  mal_decoder_layer.py  memory_adapter.py  patcher.py
tests/: __init__.py  test_compile.py  test_memory_optimization.py  test_mhc_mlx.py  test_mlx_titans.py  test_model.py  test_packed_data.py  test_qwen_titans.py  test_titans_algorithm.py  test_triton_kernels.py
