[project]
name = "nanogpt-titans"
version = "0.1.0"
description = "Titans: Learning to Memorize at Test Time - Implementation on top of nanoGPT"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "XiaoConstantine" }]
keywords = ["transformers", "memory", "deep-learning", "pytorch", "titans"]

dependencies = [
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "einops>=0.8.0",
    "tiktoken>=0.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
train = [
    "wandb>=0.18.0",
    "datasets>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanogpt_titans"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "B905",   # zip without strict=
]

[tool.ruff.lint.isort]
known-first-party = ["nanogpt_titans"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
